// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show up CLI version information 1`] = `"1.5.1"`;

exports[`show up CLI version information 2`] = `"1.5.1"`;

exports[`show up help information on passing in the respective options 1`] = `
"
  Usage: mevn <command> [options]

  Options:

    -V, --version              output the version number
    -h, --help                 output usage information

  Commands:

    init <appname>             To init the project
    codesplit <componentname>  To code split the required component
    generate                   To generate model, route, controller and DB config files
    add:package                To add a new package to the project
    serve                      To serve client/server
    dockerize                  To dockerize the app
    deploy                     To deploy the app to Heroku
    info                       Prints debugging information about the local environment"
`;

exports[`show up help information on passing in the respective options 2`] = `
"
  Usage: mevn <command> [options]

  Options:

    -V, --version              output the version number
    -h, --help                 output usage information

  Commands:

    init <appname>             To init the project
    codesplit <componentname>  To code split the required component
    generate                   To generate model, route, controller and DB config files
    add:package                To add a new package to the project
    serve                      To serve client/server
    dockerize                  To dockerize the app
    deploy                     To deploy the app to Heroku
    info                       Prints debugging information about the local environment"
`;

exports[`shows up help if no arguments were passed 1`] = `
"
  Usage: mevn <command> [options]

  Options:

    -V, --version              output the version number
    -h, --help                 output usage information

  Commands:

    init <appname>             To init the project
    codesplit <componentname>  To code split the required component
    generate                   To generate model, route, controller and DB config files
    add:package                To add a new package to the project
    serve                      To serve client/server
    dockerize                  To dockerize the app
    deploy                     To deploy the app to Heroku
    info                       Prints debugging information about the local environment"
`;

exports[`suggests the matching command if the user makes a typo 1`] = `
"
  Usage: mevn <command> [options]

  Options:

    -V, --version              output the version number
    -h, --help                 output usage information

  Commands:

    init <appname>             To init the project
    codesplit <componentname>  To code split the required component
    generate                   To generate model, route, controller and DB config files
    add:package                To add a new package to the project
    serve                      To serve client/server
    dockerize                  To dockerize the app
    deploy                     To deploy the app to Heroku
    info                       Prints debugging information about the local environment
  
  Unknown command ini.

  Did you mean init?"
`;

exports[`warns the user if an unknown command is passed 1`] = `
"
  Usage: mevn <command> [options]

  Options:

    -V, --version              output the version number
    -h, --help                 output usage information

  Commands:

    init <appname>             To init the project
    codesplit <componentname>  To code split the required component
    generate                   To generate model, route, controller and DB config files
    add:package                To add a new package to the project
    serve                      To serve client/server
    dockerize                  To dockerize the app
    deploy                     To deploy the app to Heroku
    info                       Prints debugging information about the local environment
  
  Unknown command junkcmd.
"
`;
